--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1014,7 +1014,7 @@ body {
   font-weight: 400;
   font-size: 14px;
   font-size: 0.875rem;
-  background-color: #33495f;
+  background-color: #f1f1f1;
 }
 /**
  * Global
@@ -1253,7 +1253,7 @@ object {
 .site-header,
 .site-footer,
 .blog-pagination {
-  background-color: #33495f;
+  background-color: #ffffff;
 }
 /* Header */
 .site-header {
