Guess what? More Colors!

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1253,7 +1253,7 @@ object {
 .site-header,
 .site-footer,
 .blog-pagination {
-  background-color: #ffffff;
+  background-color: #f1f1f1;
 }
 /* Header */
 .site-header {
